tests/golden/expected/selector_unknown_tag.stdout.txt
Compile error: tests/fixtures/selector_unknown_tag.lamp:14: type error: unknown action or tag "manipulatoin"
  14 | instead take or manipulatoin when holder(self.actor) == room1:
    | ^
